fix(merlin-www-card): remove hidden byline on wired's top story cards
[ch558]

--- a/packages/merlin-www-card/sass/wired/_top-stories.scss
+++ b/packages/merlin-www-card/sass/wired/_top-stories.scss
@@ -61,7 +61,6 @@
 	}
 
 	.c-card__byline {
-		display: none;
 	    @include font-size(11px);
 	    @include line-height(11px);
 	    margin-bottom: 5px;
